--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="header" id="first">
 	<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
 		<div class="container text-uppercase p-2"> 
-  <a class="navbar-brand" href="#"><b>The Cars<b></a>
+  <a class="navbar-brand" href="#">The Cars</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -44,7 +44,7 @@
 </nav>
 <section class="header-section">
 	<div class="center-div">
-		<h1 class="font-weight-bold"> Where old stays</h1>
+		<h1 class="font-weight-bold">Where old stays</h1>
 		<div class="header-buttons">
 			<a href="#footerdiv">Who are we</a>
 			<a href="#contactid">Contact</a>
